--- a/package.json
+++ b/package.json
@@ -52,6 +52,8 @@
     "autoprefixer": "^10.4.20",
     "drizzle-kit": "^0.30.1",
     "eslint": "^9",
+  "eslint": "^8.0.1",
+  "eslint-config-standard": "^17.1.0",
     "eslint-config-next": "15.1.2",
     "eslint-config-prettier": "^9.1.0",
     "postcss": "^8.4.49",
